--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,7 @@
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-graphics</artifactId>
-            <version>${javafx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-base</artifactId>
+            <artifactId>javafx-web</artifactId>
             <version>${javafx.version}</version>
         </dependency>
 
@@ -39,7 +34,7 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>11.1.1</version> <!-- Asegúrate de usar la versión más reciente si es diferente -->
+            <version>11.1.1</version>
         </dependency>
     </dependencies>
 
@@ -59,15 +54,10 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.6</version>
-                <executions>
-                    <execution>
-                        <id>default-cli</id>
-                        <configuration>
-                            <mainClass>Controladores.Main</mainClass> <!-- Asegúrate de que la ruta sea correcta -->
-                        </configuration>
-                    </execution>
-                </executions>
+                <version>0.0.8</version> <!-- Usa una versión más reciente -->
+                <configuration>
+                    <mainClass>Controladores.Main</mainClass> <!-- Ajusta según tu paquete y clase principal -->
+                </configuration>
             </plugin>
         </plugins>
     </build>
